Archive2/3c/e386add1325990/output
main.cpp:24:14: error: declaration of 'class T'
     template<typename T, T N, T... Tail>
              ^
main.cpp:22:14: error:  shadows template parm 'class T'
     template<typename T, T... Tail>
              ^
main.cpp:24:31: error: declaration of 'T ...Tail'
     template<typename T, T N, T... Tail>
                               ^
main.cpp:22:26: error:  shadows template parm 'T ...Tail'
     template<typename T, T... Tail>
                          ^
main.cpp:25:12: error: too many template-parameter-lists
     struct make_integer_sequence {
            ^
main.cpp: In function 'int main()':
main.cpp:33:76: error: '__detail_integer_sequence::make_integer_sequence<int, 1>::type' has not been declared
     std::cout << __detail_integer_sequence::make_integer_sequence<int, 1>::type::size();
                                                                            ^
